// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable snapshots renders an element instead of a label 1`] = `
.c1 {
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:hover {
  color: hsl(191,100%,35%);
}

.c0 {
  border-collapse: collapse;
  width: 100%;
  table-layout: fixed;
}

.c0 td {
  padding: 10px 8px;
  vertical-align: top;
  border-left: 1px solid rgba(224,224,235,0.4);
}

.c0 thead td {
  border: 0;
  font-weight: bold;
}

.c0 thead,
.c0 tbody {
  border-bottom: 1px solid rgba(224,224,235,0.4);
  border-left: 3px solid transparent;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <td
        className="c1"
        onClick={[Function]}
        title={undefined}
      >
        <i
          className="fa fa-some-icon"
        />
         
        <i
          className="fa fa-caret-down"
        />
      </td>
      <td
        className="c1"
        onClick={[Function]}
        title="Email"
      >
        Email
         
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Albert
      </td>
      <td>
        b@weave.works
      </td>
    </tr>
    <tr>
      <td>
        Bob
      </td>
      <td>
        a@weave.works
      </td>
    </tr>
    <tr>
      <td>
        Ty
      </td>
      <td>
        c@weave.works
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DataTable snapshots renders column widths 1`] = `
.c1 {
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
}

.c1:hover {
  color: hsl(191,100%,35%);
}

.c2 {
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 80px;
}

.c2:hover {
  color: hsl(191,100%,35%);
}

.c0 {
  border-collapse: collapse;
  width: 100%;
  table-layout: fixed;
}

.c0 td {
  padding: 10px 8px;
  vertical-align: top;
  border-left: 1px solid rgba(224,224,235,0.4);
}

.c0 thead td {
  border: 0;
  font-weight: bold;
}

.c0 thead,
.c0 tbody {
  border-bottom: 1px solid rgba(224,224,235,0.4);
  border-left: 3px solid transparent;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <td
        className="c1"
        onClick={[Function]}
        title="Name"
      >
        Name
         
        <i
          className="fa fa-caret-down"
        />
      </td>
      <td
        className="c2"
        onClick={[Function]}
        title="Email"
      >
        Email
         
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Albert
      </td>
      <td>
        b@weave.works
      </td>
    </tr>
    <tr>
      <td>
        Bob
      </td>
      <td>
        a@weave.works
      </td>
    </tr>
    <tr>
      <td>
        Ty
      </td>
      <td>
        c@weave.works
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DataTable snapshots renders extra headers 1`] = `
.c1 {
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:hover {
  color: hsl(191,100%,35%);
}

.c0 {
  border-collapse: collapse;
  width: 100%;
  table-layout: fixed;
}

.c0 td {
  padding: 10px 8px;
  vertical-align: top;
  border-left: 1px solid rgba(224,224,235,0.4);
}

.c0 thead td {
  border: 0;
  font-weight: bold;
}

.c0 thead,
.c0 tbody {
  border-bottom: 1px solid rgba(224,224,235,0.4);
  border-left: 3px solid transparent;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <td
        className="c1"
        onClick={[Function]}
        title="Name"
      >
        Name
         
        <i
          className="fa fa-caret-down"
        />
      </td>
      <td
        className="c1"
        onClick={[Function]}
        title="Email"
      >
        Email
         
      </td>
      <th>
        <div>
          Some other header
        </div>
      </th>
      <th>
        <div>
          Another one
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Albert
      </td>
      <td>
        b@weave.works
      </td>
    </tr>
    <tr>
      <td>
        Bob
      </td>
      <td>
        a@weave.works
      </td>
    </tr>
    <tr>
      <td>
        Ty
      </td>
      <td>
        c@weave.works
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DataTable snapshots renders nested rows 1`] = `
.c1 {
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:hover {
  color: hsl(191,100%,35%);
}

.c0 {
  border-collapse: collapse;
  width: 100%;
  table-layout: fixed;
}

.c0 td {
  padding: 10px 8px;
  vertical-align: top;
  border-left: 1px solid rgba(224,224,235,0.4);
}

.c0 thead td {
  border: 0;
  font-weight: bold;
}

.c0 thead,
.c0 tbody {
  border-bottom: 1px solid rgba(224,224,235,0.4);
  border-left: 3px solid transparent;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <td
        className="c1"
        onClick={[Function]}
        title="Workload"
      >
        Workload
         
        <i
          className="fa fa-caret-down"
        />
      </td>
      <td
        className="c1"
        onClick={[Function]}
        title="Containers"
      >
        Containers
         
      </td>
      <td
        className="c1"
        onClick={[Function]}
        title="Behind"
      >
        Behind
         
      </td>
    </tr>
  </thead>
  <tbody>
    <tbody>
      <tr>
        <td
          rowSpan={1}
        >
          default:deployment/helloworld
        </td>
        <td>
          helloworld
        </td>
        <td>
          2
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <td
          rowSpan={3}
        >
          default:deployment/myworkload
        </td>
        <td>
          nginx
        </td>
        <td>
          4
        </td>
      </tr>
      <tr>
        <td>
          redis
        </td>
        <td>
          1
        </td>
      </tr>
      <tr>
        <td>
          envoy
        </td>
        <td>
          2
        </td>
      </tr>
    </tbody>
  </tbody>
</table>
`;

exports[`DataTable snapshots renders rows 1`] = `
.c1 {
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:hover {
  color: hsl(191,100%,35%);
}

.c0 {
  border-collapse: collapse;
  width: 100%;
  table-layout: fixed;
}

.c0 td {
  padding: 10px 8px;
  vertical-align: top;
  border-left: 1px solid rgba(224,224,235,0.4);
}

.c0 thead td {
  border: 0;
  font-weight: bold;
}

.c0 thead,
.c0 tbody {
  border-bottom: 1px solid rgba(224,224,235,0.4);
  border-left: 3px solid transparent;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <td
        className="c1"
        onClick={[Function]}
        title="Name"
      >
        Name
         
        <i
          className="fa fa-caret-down"
        />
      </td>
      <td
        className="c1"
        onClick={[Function]}
        title="Email"
      >
        Email
         
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Albert
      </td>
      <td>
        b@weave.works
      </td>
    </tr>
    <tr>
      <td>
        Bob
      </td>
      <td>
        a@weave.works
      </td>
    </tr>
    <tr>
      <td>
        Ty
      </td>
      <td>
        c@weave.works
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DataTable snapshots sorts fields by a give order 1`] = `
.c1 {
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:hover {
  color: hsl(191,100%,35%);
}

.c0 {
  border-collapse: collapse;
  width: 100%;
  table-layout: fixed;
}

.c0 td {
  padding: 10px 8px;
  vertical-align: top;
  border-left: 1px solid rgba(224,224,235,0.4);
}

.c0 thead td {
  border: 0;
  font-weight: bold;
}

.c0 thead,
.c0 tbody {
  border-bottom: 1px solid rgba(224,224,235,0.4);
  border-left: 3px solid transparent;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <td
        className="c1"
        onClick={[Function]}
        title="Name"
      >
        Name
         
      </td>
      <td
        className="c1"
        onClick={[Function]}
        title="Email"
      >
        Email
         
        <i
          className="fa fa-caret-up"
        />
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Ty
      </td>
      <td>
        c@weave.works
      </td>
    </tr>
    <tr>
      <td>
        Albert
      </td>
      <td>
        b@weave.works
      </td>
    </tr>
    <tr>
      <td>
        Bob
      </td>
      <td>
        a@weave.works
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DataTable snapshots sorts rows by a field 1`] = `
.c1 {
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:hover {
  color: hsl(191,100%,35%);
}

.c0 {
  border-collapse: collapse;
  width: 100%;
  table-layout: fixed;
}

.c0 td {
  padding: 10px 8px;
  vertical-align: top;
  border-left: 1px solid rgba(224,224,235,0.4);
}

.c0 thead td {
  border: 0;
  font-weight: bold;
}

.c0 thead,
.c0 tbody {
  border-bottom: 1px solid rgba(224,224,235,0.4);
  border-left: 3px solid transparent;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <td
        className="c1"
        onClick={[Function]}
        title="Name"
      >
        Name
         
      </td>
      <td
        className="c1"
        onClick={[Function]}
        title="Email"
      >
        Email
         
        <i
          className="fa fa-caret-down"
        />
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Bob
      </td>
      <td>
        a@weave.works
      </td>
    </tr>
    <tr>
      <td>
        Albert
      </td>
      <td>
        b@weave.works
      </td>
    </tr>
    <tr>
      <td>
        Ty
      </td>
      <td>
        c@weave.works
      </td>
    </tr>
  </tbody>
</table>
`;
